<resources>
    <string name="app_name">ToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_time_btn_text">Set Time</string>
    <string name="set_date_btn_text">Set Date</string>
    <string name="save_btn_text">Save Task</string>
    <string name="create_task_header">Create A New Task</string>
    <string name="task_name">Task Name</string>
    <string name="due">Due:</string>
</resources>