<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CreateTaskSheet">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_task_header"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            style="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/title"/>


    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/name"
                android:hint="@string/task_name"
                android:maxLength="60"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/set_time_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_time"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="?attr/colorSecondary"
                android:textColor="?colorOnSecondary"/>
        <Button
                android:text="@string/set_date_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_date"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="?attr/colorSecondary"
                android:textColor="?colorOnSecondary"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/complete_green"
            android:textColor="@color/black"
            android:text="@string/save_btn_text"/>

</LinearLayout>